--- a/app/src/main/res/layout/dua_item.xml
+++ b/app/src/main/res/layout/dua_item.xml
@@ -59,7 +59,8 @@
 			android:layout_marginTop="8dp"
 			android:layout_marginEnd="8dp"
 			tools:text="Arabic text"
-			android:textSize="16sp"
+			android:textSize="28sp"
+			android:textColor="@color/black"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
