--- a/app/src/main/res/drawable/zikr_icon_bg.xml
+++ b/app/src/main/res/drawable/zikr_icon_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
 
-	<solid android:color="@android:color/darker_gray" />
+	<solid android:color="@color/teal_200" />
 	<corners android:bottomLeftRadius="10dp" />
 
 </shape>
